--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_notification">Daftar Pemberitahuan</string>
     <string name="menu_statistic">Statistik Draft</string>
     <string name="menu_search">Pencarian</string>
+    <string name="menu_mail_noitf">Pemberitahuan Mail</string>
     <string name="menu_logout">Logout</string>
     <string name="dialog_close">Tutup</string>
     <string name="btn_comment">Berikan Komentar</string>
